# FreeRDP

./: CMakeLists.txt  config.h.in
client/X11/: CMakeLists.txt  xf_event.c  xf_keyboard.h  xf_keyboard_thinlinc.c  xf_keyboard_thinlinc.h
cmake/: ConfigOptions.cmake  FindJudy.cmake  FindThinLinc.cmake
include/freerdp/locale/: locale.h
libfreerdp/locale/: CMakeLists.txt  kbd_thinlinc_layout.c  kbd_thinlinc_layout.h  keyboard.c  keyboard_thinlinc.c  keyboard_thinlinc.h  keyboard_thinlinc_lexer.l  keyboard_thinlinc_parser.y  locale.c
